--- a/charts/kubernetes-dashboard/values.yaml
+++ b/charts/kubernetes-dashboard/values.yaml
@@ -92,11 +92,11 @@ app:
     #  #  Is this CRD namespaced?
     #  namespaced: true
   ingress:
-    enabled: false
+    enabled: true
     hosts:
       # Keep 'localhost' host only if you want to access Dashboard using 'kubectl port-forward ...' on:
       # https://localhost:8443
-      - localhost
+      - t-clo-902-lil-1-vm1.westeurope.cloudapp.azure.com/
     # - kubernetes.dashboard.domain.com
     ingressClassName: internal-nginx
     # Use only if your ingress controllers support default ingress classes.
@@ -112,7 +112,7 @@ app:
     # If path is not the default (/), rewrite-target annotation will be added to the Ingress.
     # It allows serving Kubernetes Dashboard on a sub-path. Make sure that the configured path
     # does not conflict with gateway route configuration.
-    path: /
+    path: /dashboard
     issuer:
       name: selfsigned
       # Scope determines what kind of issuer annotation will be used on ingress resource
